chore: remove current web files in favor of vite bundler

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Gothic2";
-  src: url("./assets/fonts/Gothic-II-Noc-Kruka-V2.ttf");
+  src: url("Gothic-II-Noc-Kruka-V2.ttf");
 }
 
 body {
